@@ -2544,7 +2544,7 @@ void EditorWindow::setupSelectToolsAction()
     }
 
     // setup categorized view
-    DCategorizedSortFilterProxyModel* const filterModel = actionModel->createFilterModel();
+    ActionSortFilterProxyModel* const filterModel = actionModel->createActionFilterModel();
 
     ActionCategorizedView* const selectToolsActionView  = new ActionCategorizedView;
     selectToolsActionView->setupIconMode();
