@@ -61,4 +61,5 @@ BUGFIXES:
 051 ==> 369657 - XMP subject matter code can be added twice.
 052 ==> 408311 - Opening and closing downloading windows.
 053 ==> 408334 - Windows elements design changed?
-054 ==> 
+054 ==> 408332 - Disabled Export plugins visible in rightside toolbar.
+055 ==> 
